CarriageType and Route controllers actions implementation
* Admin::CarriageTypesController - added :cost_per_hour attribute to route_params.

* Admin::RoutesController - implemented #update action for updating standard travel time of route.

* CarriageTypes::UpdaterService - replaced concrete attributes on carriage_type_params.

* CarriageType model - added validation for :cost_per_hour.

* Admin::RoutePolicy - implemented policy for #update action.

* CarriageType and Route serializers - added new columns to attributes lists.

* specs - covered the above changes with tests.

* docs - regenerated documenation with rswag.
