# app/models/carriage_type.rb
@@ -6,4 +6,5 @@ class CarriageType < ApplicationRecord
   validates :name, presence: true, length: { minimum: 3, maximum: 32 }
   validates :description, length: { maximum: 140 }
   validates :capacity, presence: true, comparison: { greater_than_or_equal_to: 0 }
+  validates :cost_per_hour, presence: true, numericality: { only_float: true, greater_than: 0 }
 end
