# config/routes.rb
@@ -12,7 +12,7 @@ Rails.application.routes.draw do
     resources :stations, only: %i[index create update destroy]
 
     resources :routes, only: %i[index]
-    resources :routes, only: %i[show create destroy], param: :route_id
+    resources :routes, only: %i[show create update destroy], param: :route_id
     resources :routes, only: [] do
       post 'stations', to: 'routes#add_station'
       delete 'stations/:station_id', to: 'routes#remove_station'
