# swagger/admin/swagger.yaml
@@ -21,30 +21,33 @@ paths:
             application/json:
               carriage_types:
                 data:
-                - id: '7730'
+                - id: '3602'
                   type: carriage_type
                   attributes:
-                    name: Raney Schauer
-                    description: Bailey-Wisozk
+                    name: June Bugg
+                    description: Welch LLC
                     capacity: 8
+                    cost_per_hour: 1.0
                   relationships:
                     carriages:
                       data: []
-                - id: '7731'
+                - id: '3603'
                   type: carriage_type
                   attributes:
-                    name: Cal Culator
-                    description: Leuschke, Casper and DuBuque
+                    name: Chris Ko
+                    description: Crist, Orn and Altenwerth
                     capacity: 8
+                    cost_per_hour: 1.0
                   relationships:
                     carriages:
                       data: []
-                - id: '7732'
+                - id: '3604'
                   type: carriage_type
                   attributes:
-                    name: Candy Barr
-                    description: Cummings-O'Kon
+                    name: Tamara Knight
+                    description: McKenzie-Windler
                     capacity: 8
+                    cost_per_hour: 1.0
                   relationships:
                     carriages:
                       data: []
@@ -103,12 +106,13 @@ paths:
               message: Carriage type successfully created
               carriage_type:
                 data:
-                  id: '7733'
+                  id: '3605'
                   type: carriage_type
                   attributes:
-                    name: Dusty Rhodes
-                    description: Macejkovic and Sons
+                    name: Leigh King
+                    description: Raynor-Tromp
                     capacity: 8
+                    cost_per_hour: 1.0
                   relationships:
                     carriages:
                       data: []
@@ -161,6 +165,9 @@ paths:
                   type: string
                 capacity:
                   type: integer
+                cost_per_hour:
+                  type: number
+                  format: float
               required:
               - name
               - capacity
@@ -168,6 +175,7 @@ paths:
                 name: Coupe
                 description: Some description
                 capacity: 32
+                cost_per_hour: 4.5
           required:
           - carriage_type
       produces:
@@ -182,12 +190,13 @@ paths:
               message: Carriage type successfully updated
               carriage_type:
                 data:
-                  id: '7734'
+                  id: '3606'
                   type: carriage_type
                   attributes:
-                    name: New name
-                    description: New description
-                    capacity: 4
+                    name: Myles Long
+                    description: Cronin, Corwin and Gorczany
+                    capacity: 8
+                    cost_per_hour: 1.0
                   relationships:
                     carriages:
                       data: []
@@ -273,29 +282,29 @@ paths:
             application/json:
               carriages:
                 data:
-                - id: '6258'
+                - id: '2908'
                   type: carriage
                   attributes:
-                    name: Hermes
+                    name: Aphrodite
                     capacity: 8
-                    carriage_type_id: 7744
-                    order_number: '24'
+                    carriage_type_id: 3616
+                    order_number: '03'
                     available: true
-                    type: Tate Urtots
+                    type: Marty Graw
                   relationships:
                     train:
                       data: 
                     seats:
                       data: []
-                - id: '6259'
+                - id: '2909'
                   type: carriage
                   attributes:
-                    name: Hera
+                    name: Artemis
                     capacity: 8
-                    carriage_type_id: 7745
-                    order_number: '31'
+                    carriage_type_id: 3617
+                    order_number: '07'
                     available: true
-                    type: Rich Feller
+                    type: Jane Linkfence
                   relationships:
                     train:
                       data: 
@@ -353,14 +362,14 @@ paths:
               message: Carriage was successfully created
               carriage:
                 data:
-                  id: '6260'
+                  id: '2910'
                   type: carriage
                   attributes:
                     name: Poseidon
                     capacity: 8
-                    carriage_type_id: 7746
+                    carriage_type_id: 3618
                     available: true
-                    type: Paige Turner
+                    type: May Furst
                   relationships:
                     train:
                       data: 
@@ -433,15 +442,15 @@ paths:
               message: Carriage name was successfully updated
               carriage:
                 data:
-                  id: '6261'
+                  id: '2911'
                   type: carriage
                   attributes:
                     name: New name
                     capacity: 8
-                    carriage_type_id: 7750
-                    order_number: '22'
+                    carriage_type_id: 3622
+                    order_number: '27'
                     available: true
-                    type: Chi Spurger
+                    type: Danielle Soloud
                   relationships:
                     train:
                       data: 
@@ -531,10 +540,11 @@ paths:
               message: Route was created
               route:
                 data:
-                  id: '2226'
+                  id: '1396'
                   type: route
                   attributes:
                     destination: No destination
+                    standard_travel_time: PT1M
                   relationships:
                     stations:
                       data: []
@@ -579,29 +589,30 @@ paths:
             application/json:
               route:
                 data:
-                  id: '2228'
+                  id: '1398'
                   type: route
                   attributes:
                     destination: No destination
+                    standard_travel_time: PT1M
                   relationships:
                     stations:
                       data:
-                      - id: '10431'
+                      - id: '5774'
                         type: station
-                      - id: '10432'
+                      - id: '5775'
                         type: station
-                      - id: '10433'
+                      - id: '5776'
                         type: station
                 included:
-                - id: '10431'
+                - id: '5774'
                   type: station
                   attributes:
                     name: Mogilev
-                - id: '10432'
+                - id: '5775'
                   type: station
                   attributes:
                     name: Mosty
-                - id: '10433'
+                - id: '5776'
                   type: station
                   attributes:
                     name: Minsk
@@ -619,6 +630,68 @@ paths:
           examples:
             application/json:
               message: Couldn't find Route with 'id'=-1
+    put:
+      summary: Update concrete route's standard_travel_time. By necr0me
+      tags:
+      - Routes
+      consumes:
+      - application/json
+      parameters:
+      - name: route_id
+        in: path
+        type: integer
+        required: true
+        description: Id of route
+      - name: params
+        in: body
+        schema:
+          type: object
+          properties:
+            route:
+              type: object
+              properties:
+                standard_travel_time:
+                  type: integer
+              required:
+              - standard_travel_time
+              example:
+                standard_travel_time: 3600
+          required:
+          - route
+      produces:
+      - application/json
+      security:
+      - Bearer: {}
+      responses:
+        '200':
+          description: Route found
+          examples:
+            application/json:
+              message: Route successfully updated
+        '401':
+          description: You are unauthorized
+          examples:
+            application/json:
+              message: You're not logged in
+              errors:
+              - Nil JSON web token
+        '403':
+          description: You are forbidden to perform this action
+          examples:
+            application/json:
+              message: You are not allowed to do this action
+        '404':
+          description: Route not found
+          examples:
+            application/json:
+              message: Couldn't find Route with 'id'=-1
+        '422':
+          description: Something went wrong during route update
+          examples:
+            application/json:
+              message: Something went wrong
+              errors:
+              - Error message
     delete:
       summary: Delete concrete route. By necr0me
       tags:
@@ -694,7 +767,7 @@ paths:
               message: Station was successfully added to route
               station:
                 data:
-                  id: '10452'
+                  id: '5807'
                   type: station
                   attributes:
                     name: Melbourne
@@ -750,7 +823,7 @@ paths:
               message: Station was successfully removed from route
               station:
                 data:
-                  id: '10465'
+                  id: '5820'
                   type: station
                   attributes:
                     name: Mogilev
@@ -800,14 +873,14 @@ paths:
           examples:
             application/json:
               stations:
-              - id: 10481
+              - id: 5836
                 name: Mogilev
-                created_at: '2023-05-12T11:01:04.055Z'
-                updated_at: '2023-05-12T11:01:04.055Z'
-              - id: 10482
+                created_at: '2023-05-17T12:33:42.232Z'
+                updated_at: '2023-05-17T12:33:42.232Z'
+              - id: 5837
                 name: Mosty
-                created_at: '2023-05-12T11:01:04.057Z'
-                updated_at: '2023-05-12T11:01:04.057Z'
+                created_at: '2023-05-17T12:33:42.234Z'
+                updated_at: '2023-05-17T12:33:42.234Z'
               pages: 1
     post:
       summary: Create a new station. By necr0me
@@ -842,10 +915,10 @@ paths:
           examples:
             application/json:
               station:
-                id: 10484
+                id: 5839
                 name: Melbourne
-                created_at: '2023-05-12T11:01:04.089Z'
-                updated_at: '2023-05-12T11:01:04.089Z'
+                created_at: '2023-05-17T12:33:42.259Z'
+                updated_at: '2023-05-17T12:33:42.259Z'
         '401':
           description: You are unauthorized
           examples:
@@ -906,9 +979,9 @@ paths:
             application/json:
               station:
                 name: New name
-                id: 10485
-                created_at: '2023-05-12T11:01:04.118Z'
-                updated_at: '2023-05-12T11:01:04.129Z'
+                id: 5840
+                created_at: '2023-05-17T12:33:42.286Z'
+                updated_at: '2023-05-17T12:33:42.295Z'
         '401':
           description: You are unauthorized
           examples:
@@ -1060,8 +1133,8 @@ paths:
               - station_id
               - train_id
               example:
-                arrival_time: '2023-05-12T14:01:02+03:00'
-                departure_time: '2023-05-12T14:21:02+03:00'
+                arrival_time: '2023-05-17T15:33:40+03:00'
+                departure_time: '2023-05-17T15:53:40+03:00'
                 way_number: 1
                 station_id: 1
                 train_id: 1
@@ -1079,21 +1152,21 @@ paths:
               message: Train stop successfully created
               train_stop:
                 data:
-                  id: '4774'
+                  id: '2800'
                   type: train_stop
                   attributes:
                     name: Melbourne
-                    arrival_time: '2023-05-12T11:01:04.433Z'
-                    departure_time: '2023-05-12T11:21:04.434Z'
+                    arrival_time: '2023-05-17T12:33:42.553Z'
+                    departure_time: '2023-05-17T12:53:42.553Z'
                     way_number: 1
                   relationships:
                     station:
                       data:
-                        id: '10497'
+                        id: '5852'
                         type: station
                     train:
                       data:
-                        id: '5118'
+                        id: '2535'
                         type: train
         '401':
           description: You are unauthorized
@@ -1154,8 +1227,8 @@ paths:
               - station_id
               - train_id
               example:
-                arrival_time: '2023-05-12T14:01:02+03:00'
-                departure_time: '2023-05-12T14:21:02+03:00'
+                arrival_time: '2023-05-17T15:33:40+03:00'
+                departure_time: '2023-05-17T15:53:40+03:00'
                 way_number: 1
                 station_id: 1
                 train_id: 1
@@ -1173,21 +1246,21 @@ paths:
               message: Train stop successfully updated
               train_stop:
                 data:
-                  id: '4775'
+                  id: '2801'
                   type: train_stop
                   attributes:
                     name: Melbourne
-                    arrival_time: '2023-05-12T11:06:04.484Z'
-                    departure_time: '2023-05-12T11:21:04.484Z'
+                    arrival_time: '2023-05-17T12:38:42.607Z'
+                    departure_time: '2023-05-17T12:53:42.607Z'
                     way_number: 1
                   relationships:
                     station:
                       data:
-                        id: '10500'
+                        id: '5855'
                         type: station
                     train:
                       data:
-                        id: '5121'
+                        id: '2538'
                         type: train
         '401':
           description: You are unauthorized
@@ -1212,7 +1285,7 @@ paths:
             application/json:
               message: Something went wrong
               errors:
-              - Departure time can't be greater than arrival time
+              - Arrival time can't be greater than departure time
     delete:
       summary: Deletes passing train. By necr0me
       tags:
@@ -1273,7 +1346,7 @@ paths:
             application/json:
               trains:
                 data:
-                - id: '5130'
+                - id: '2547'
                   type: train
                   attributes:
                     destination: No destination
@@ -1284,7 +1357,7 @@ paths:
                       data: []
                     route:
                       data: 
-                - id: '5131'
+                - id: '2548'
                   type: train
                   attributes:
                     destination: No destination
@@ -1343,7 +1416,7 @@ paths:
               message: Train was successfully created
               train:
                 data:
-                  id: '5132'
+                  id: '2549'
                   type: train
                   attributes:
                     destination: No destination
@@ -1354,7 +1427,7 @@ paths:
                       data: []
                     route:
                       data:
-                        id: '2243'
+                        id: '1417'
                         type: route
         '401':
           description: You are unauthorized
@@ -1413,10 +1486,10 @@ paths:
             application/json:
               message: Train was successfully updated
               train:
-                route_id: 2246
-                id: 5134
-                created_at: '2023-05-12T11:01:04.739Z'
-                updated_at: '2023-05-12T11:01:04.837Z'
+                route_id: 1420
+                id: 2551
+                created_at: '2023-05-17T12:33:42.870Z'
+                updated_at: '2023-05-17T12:33:42.977Z'
         '401':
           description: You are unauthorized
           examples:
@@ -1516,37 +1589,37 @@ paths:
               message: Carriage was successfully added to train
               carriage:
                 data:
-                  id: '6297'
+                  id: '2947'
                   type: carriage
                   attributes:
-                    name: Hermes
+                    name: Athena
                     capacity: 8
-                    carriage_type_id: 7786
+                    carriage_type_id: 3658
                     order_number: '01'
                     available: false
-                    type: May Furst
+                    type: Midas Well
                   relationships:
                     train:
                       data:
-                        id: '5142'
+                        id: '2559'
                         type: train
                     seats:
                       data:
-                      - id: '18433'
+                      - id: '8935'
                         type: seat
-                      - id: '18434'
+                      - id: '8936'
                         type: seat
-                      - id: '18435'
+                      - id: '8937'
                         type: seat
-                      - id: '18436'
+                      - id: '8938'
                         type: seat
-                      - id: '18437'
+                      - id: '8939'
                         type: seat
-                      - id: '18438'
+                      - id: '8940'
                         type: seat
-                      - id: '18439'
+                      - id: '8941'
                         type: seat
-                      - id: '18440'
+                      - id: '8942'
                         type: seat
         '401':
           description: You are unauthorized
@@ -1600,14 +1673,14 @@ paths:
               message: Carriage was successfully removed from train
               carriage:
                 data:
-                  id: '6301'
+                  id: '2951'
                   type: carriage
                   attributes:
-                    name: Aphrodite
+                    name: Hera
                     capacity: 8
-                    carriage_type_id: 7790
+                    carriage_type_id: 3662
                     available: true
-                    type: Justin Sane
+                    type: Megan Bacon
                   relationships:
                     train:
                       data: 
